--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <nav>
             <div class="nav-wrapper">
                 <img href="#" src="res/img/logo.jpg" class="logo-img">
+                <a href="#" class="brand-logo center hide-on-med-and-down">ExeHack</a>
                 <ul id="nav-mobile" class="right">
                 <li><a href="sass.html">About</a></li>
                 <li><a href="badges.html">Sessions</a></li>
@@ -25,10 +26,9 @@
             </div>
         </nav>
 
-        
-
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
       
