--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
 
         <nav>
-            <div class="nav-wrapper">
+            <div class="nav-wrapper black">
                 <img href="#" src="res/img/logo.jpg" class="logo-img">
                 <a href="#" class="brand-logo center hide-on-med-and-down">ExeHack</a>
                 <ul id="nav-mobile" class="right">
@@ -25,6 +25,14 @@
                 </ul>
             </div>
         </nav>
+
+        <div class="hero">
+            <div class="hero-text white-text">
+                <h1>ExeHack 2020</h1>
+                <p>A fun event for CompSci members</p>
+                <a class="waves-effect waves-light btn-large">Register Now</a>
+            </div>
+        </div>
 
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/materialize.min.js"></script>
