--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                 <img href="#" src="res/img/logo.jpg" class="logo-img">
                 <a href="#" class="brand-logo center hide-on-med-and-down">ExeHack</a>
                 <ul id="nav-mobile" class="right">
-                <li><a href="sass.html">About</a></li>
-                <li><a href="badges.html">Sessions</a></li>
-                <li><a href="collapsible.html">Register</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#sponsors">Sponsors</a></li>
+                <li><a href="#register">Register</a></li>
                 </ul>
             </div>
         </nav>
@@ -30,10 +30,22 @@
             <div class="hero-text white-text">
                 <h1>ExeHack 2020</h1>
                 <p>A fun event for CompSci members</p>
-                <a class="waves-effect waves-light btn-large">Register Now</a>
+                <a href="#sponsors" class="waves-effect waves-light btn-large red">Become a Sponsor</a>
+                <a href="#register" class="waves-effect waves-light btn-large">Register Now</a>
             </div>
         </div>
 
+        <div id="about">
+
+        </div>
+
+        <div id="sponsors">
+
+        </div>
+
+        <div id="register">
+
+        </div>
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
