--- a/index.html
+++ b/index.html
@@ -35,8 +35,24 @@
             </div>
         </div>
 
-        <div id="about">
-
+        <div id="about" class="row">
+            <h2 class="col s6 offset-s3 center-align">About The Event</h2>
+            <p class="col s6 offset-s3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <div class="col s2 offset-s3">
+                <i class="material-icons">group</i>
+                <h5 class="center-align">Team Up</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+            </div>    
+            <div class="col s2">
+                <i class="material-icons">code</i>
+                <h5 class="center-align">Code</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+            </div>    
+            <div class="col s2">
+                <i class="material-icons">present_to_all</i>
+                <h5 class="center-align">Present</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+            </div>    
         </div>
 
         <div id="sponsors">
