first draft basically

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 
             <div id="register">
                 <h2 class="center-align">Register</h2>
+                <p>Sign up now with your team name to secure a place at the event.</p>
                 <div class="row">
                     <div class="input-field col s6">
                       <input placeholder="John" id="first_name" type="text" class="validate">
@@ -88,11 +89,17 @@
                       <input placeholder="jsmith@gmail.com" id="email" type="text" class="validate">
                       <label for="email">Email</label>
                     </div>
+                    <a href="#register" class="waves-effect waves-light btn right">Register</a>               
                 </div>
-                <a href="#register" class="waves-effect waves-light btn right">Register</a>               
             </div>
         </div>
-        
+        <footer class="page-footer black">
+            <div class="container">
+                <h5 class="white-text">Notes</h5>
+                <p>This is just a demo that I made because I wanted to try out Materialize. If people want to go ahead with this I guess that the next steps are getting text content into the places that need it and then raising issues on GitHub to generally improve the site / link up the form / etc.</p>
+            </div>
+        </footer>
+            
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
